# MediaPlayer

./: CMakeLists.txt  README.md  main.cpp
AHAL/: CMakeLists.txt  ahal.cpp  ahal.h  main.cpp  wav_parser.cpp
AHAL/include/: ahal.h  wav_parser.h
AHAL/src/: ahal.cpp
AudioManager/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  decoder.cpp  decoder.h  main.cpp
AudioManager/include/: AudioManager.h  StateMachine.h  devghevClient.h
AudioManager/src/: AudioManager.cpp
HMI/: CMakeLists.txt  hmi.cpp  hmi.h  main.cpp
HMI/include/: mediacontrols.h
HMI/src/: mediacontrols.cpp
UI/: CMakeLists.txt  main.cpp  mediacontrols.cpp  mediacontrols.h
devghev/: CMakeLists.txt
devghev/example/: writer.cpp
devghev/include/: devghev.hpp
devghev/src/: devghev.cpp
lib/devghev/: CMakeLists.txt
lib/devghev/example/: reader.cpp  second_writer.cpp
lib/devghev/src/: devghev.cpp
lib/libaudio/: CMakeLists.txt
lib/libaudio/include/: audio.h
lib/libaudio/src/: audio_client.cpp  audio_server.cpp
lib/libmedia/: CMakeLists.txt
lib/libmedia/include/: decoder.h
lib/libmedia/src/: decoder.cpp
metaData/songs/: Baahubali.wma  Safarnama_Tamasha.aac
